Fri May 05 09:21:21 1995  Chris Provenzano (proven@mit.edu)

	* default.exp : Removed FILE: part of env(KRB5CCNAME).

Wed May  3 22:00:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: (get_hostname): The FQDN returned by resolve needs
		to be made lower case as the host name is entered directly
		into the database.

Mon May  1 21:32:57 1995  Theodore Y. Ts'o  (tytso@dcl)

	* default.exp: (get_hostname): Use tests/resolve/resolve to get
		the fully qualified domain name of the local host.
		Needed for systems where gethostname() doesn't return the
		FQDN. 

Thu Apr 27 00:22:30 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: KRB5KDC: add -n to don't fork. Set up krb5.conf 
		and set KRB5_CONFIG to point to it.

Wed Apr 26 17:46:57 1995  Mark Eichin  <eichin@cygnus.com>

	* default.exp (KADMIND, KADMIN): use kadmind.old, since these test
	the old server not the new (unfinished) one.
